--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
         <input type="text" id="search" placeholder="ej. harry potter" autofocus/>
-        <a href="addtodbf.html"><button>Agregar peli</button></a>
+        <!--<a href="addtodbf.html"><button>Agregar peli</button></a>-->
     </header>
   
       <div id="content">
