--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
   <body>
     <header>
         <input type="text" id="search" placeholder="ej. harry potter" autofocus/>
+        <input type="checkbox" id="saga">
+        <label for="saga">Saga</label>
+        <input type="checkbox" id="sin_saga">
+        <label for="sin_saga">Sin Saga</label>
         <!--<a href="addtodbf.html"><button>Agregar peli</button></a>-->
     </header>
-  
+
       <div id="content">
-      </div>  
+      </div>
 
     <script src="movieSearch.js"></script>
     <script src="api.js"></script>
