--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <label for="saga">Saga</label>
         <input type="checkbox" id="sin_saga">
         <label for="sin_saga">Sin Saga</label>
+        <input type="checkbox" id="kids">
+        <label for="kids">Infantil</label>
         <!--<a href="addtodbf.html"><button>Agregar peli</button></a>-->
     </header>
 
